<resources>
    <string name="app_name">TheCheezery</string>
    <string name="welcome_text">Welcome to the Cheezery!</string>
    <string name="welcome_description">Home of the most wonderful dessert ever seen(and tasted) by the human beign</string>
    <string name="button_start">get started!</string>

    <string name="name">Name</string>
    <string name="last_name">Last Name</string>
    <string name="e_mail">E-mail</string>
    <string name="password">Passwoord</string>
    <string name="terms">I have read and accept terms and conditions of the cheezery</string>
    <string name="sign_in">Sign in</string>

    <string name="our_menu">Our Menu</string>
    <string name="cold_drink">Cold drinks</string>
    <string name="hot_drinks">Hot Drinks</string>
    <string name="sweets">Sweets</string>
    <string name="salties">Salties</string>
    <string name="combos">Combos</string>


</resources>