<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/purple_grey"
    tools:context=".MainActivity">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="470dp"
        android:src="@drawable/thecheezery"
        android:scaleType="fitXY"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="24sp"
        android:layout_marginTop="25dp"
        android:textColor="@color/dusty_white"
        android:fontFamily="sans-serif-light"
        android:text="@string/welcome_text"
        android:textAlignment="center"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="15sp"
        android:layout_marginTop="25dp"
        android:textStyle="italic"
        android:textColor="@color/dusty_white"
        android:fontFamily="sans-serif-light"
        android:text="@string/welcome_description"
        android:textAlignment="center"/>

    <Button
        android:id="@+id/btn_get_started"
        android:layout_width="219dp"
        android:layout_height="40dp"
        android:text="@string/button_start"
        android:background="@drawable/round_button"
        android:textColor="@color/white"
        android:layout_gravity="center"
        android:layout_marginTop="5dp"/>


</LinearLayout>